modification sur la partie de CLI